--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
-db.url =jdbc:mysql:aws://localhost:3306/Orders?
+db.url =jdbc:mysql://localhost:3306/Orders
 db.user = root
 db.password = 3713k
 db.driver = com.mysql.cj.jdbc.Driver
